fix issues with the scrollbar visibility

--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -56,3 +56,8 @@
     background: transparent;
     /* make scrollbar transparent */
 }
+
+.books-carousel {
+    scrollbar-width: none;
+    scrollbar-color: transparent transparent;
+}
